<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6fff00"
    tools:context="com.example.umairmumtaz.connectyou.view.activities.ChatActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#edecec"
        android:ems="10"
        android:hint="@string/chatbox"
        android:inputType="textPersonName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="98dp"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="@string/sendButton" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="89dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:background="#edecec"
        android:ems="10"
        android:hint="@string/chat"
        android:inputType="textPersonName" />
</RelativeLayout>
